frontend/tests/cases/positive/instanceCoeffectPlus.gr
interface Plus a (c : Nat) where
  sum : a [c] -> a

data A = A

instance Plus A (m+n) where
  sum [A] = A
