frontend/tests/cases/negative/kindMismatchInInstanceHeadDT2Params.gr
interface Simple (a : Type -> Type) where
  simple : a -> a

data A a b = A

-- (A a b) has wrong kind
instance Simple (A a b) where
  simple x = A
